--- a/word_clock/package.json
+++ b/word_clock/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.8.2",
     "react-router-native": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
